# strapi-api-sdk

./: .gitignore  README.md  pyproject.toml
strapi_api_sdk/helpers/: query_builder.py
strapi_api_sdk/models/: exceptions.py
strapi_api_sdk/sdk/: __init__.py  client.py
strapi_api_sdk/sdk/modules/: auth.py  http.py  user.py
strapi_api_sdk/utils/: constants.py  http_utils.py
